<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tf_publisher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="gavin.arpandy@gmail.com">asrlab</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf_transformations</depend>
  <depend>numpy</depend>

  <export>
    <build_type>ament_python</build_type>
    <exec_depend>ros2launch</exec_depend> <!-- Required for launch files -->
  </export>
</package>
